--- a/src/index.css
+++ b/src/index.css
@@ -16,24 +16,21 @@ a {
   color: #000000;
   text-decoration: inherit;
   transition: 0.3s ease-in-out;
-  
+
 }
 
 a:hover {
   color: #c3ad04;
-  transform: scale(1.2);
+  transform: scale(1.02);
 }
 
 body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  padding: 0 1rem;
 }
