--- a/src/index.css
+++ b/src/index.css
@@ -12,16 +12,23 @@
 
 
 a {
-  font-weight: 500;
-  color: #000000;
   text-decoration: inherit;
   transition: 0.4s ease-in-out;
-  font-family: Playwrite;
 }
 
 a:hover {
   color: #c3ad04;
   transform: scale(1.04);
+}
+
+.navbar-nav .nav-link {
+  color: rgb(0, 0, 0) !important;
+  transition: color 0.3s ease;
+  transition: 0.3s ease-in-out;
+}
+
+.navbar-nav .nav-link:hover {
+  color: rgb(255, 0, 0) !important;
 }
 
 body {
