--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 #root {
   max-width: 1780px;
+
 }
 
 .gallery-item {
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
 
 .gallery-item:hover {
@@ -20,6 +22,7 @@
 .gallery-item:hover img {
   transform: scale(1.2);
   opacity: 0.5;
+  
 }
 
 .gallery-item::after {
