--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,11 @@
 #root {
-
-
+  max-width: 1780px;
 }
 
 .gallery-item {
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  transition: 0.3s ease-in-out;
 }
 
 .gallery-item:hover {
@@ -22,7 +20,6 @@
 .gallery-item:hover img {
   transform: scale(1.2);
   opacity: 0.5;
-  
 }
 
 .gallery-item::after {
