--- a/src/About.css
+++ b/src/About.css
@@ -1,7 +1,7 @@
 /* Full-width background */
 .about-background {
     width: 100vw; /* Full width of the viewport */
-    background-color: #676767; /* Your desired background color */
+    background-color: #140D4F; /* Your desired background color */
     padding: 50px 0; /* Space around the content */
   }
   
@@ -9,7 +9,7 @@
   .about-container {
     max-width: 1200px; /* Adjust this value as needed for your layout */
     margin: 0 auto; /* Center content */
-    background-color: #676767; /* Inner content background if needed */
+    background-color: #140D4F; /* Inner content background if needed */
     padding: 20px; /* Adjust padding */
     border-radius: 10px; /* Optional, for visual design */
   }
@@ -18,4 +18,7 @@
     color: white;
   }
   
+  .continue{
+    color: #ED254E !important;
+  }
   
